[project]
name = "autoresearch"
version = "0.1.0"
description = "Autonomous RL research swarm"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "envpool>=0.8.4; sys_platform == 'linux'",
    "gymnasium[atari,other]>=0.26.0",
    "matplotlib>=3.10.8",
    "numpy<2",
    "pandas>=2.3.3",
    "torch>=2.3.0; sys_platform != 'darwin' or platform_machine != 'x86_64'",
    "torch>=2.0.0,<=2.2.2; sys_platform == 'darwin' and platform_machine == 'x86_64'",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
